--- a/VCFDemo/appsettings.json
+++ b/VCFDemo/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "VCFDemoContext": "Server=(localdb)\\mssqllocaldb;Database=VCFDemoContext-648c96eb-6d7a-4b90-a697-47ad7c5f6d95;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
